--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "request": "^2.88.2",
     "shelljs": "^0.8.5",
     "valid-url": "^1.0.9",
-    "whatsapp-web.js": "^1.22.2-alpha.0"
+    "whatsapp-jaenudin.js": "^1.0.0"
+  },
+  "devDependencies": {
+    "puppeteer": "^21.1.1"
   }
 }
